<resources>

    <string name="app_name">Alive</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_signup2">Signup2</string>

    <string name="action_settings">Settings</string>

    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirmer password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="confirmer">Confirmer</string>
    <string name="name">Nom</string>
    <string name="fname">Prénom</string>
    <string name="etape1">Etape 1</string>
    <string name="etape2">Etape 2</string>
    <string name="ref">Référence</string>
    <string name="saved">vous êtes enregistrés!</string>

    <string-array name="models">
        <item>Model 1</item>
        <item>Model 2</item>
        <item>Model 3</item>
        <item>Model 4</item>
        <item>Model 5</item>
    </string-array>

    <string name="action_example">Example action</string>

</resources>
