<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginAct"
    android:background="#b9ff54">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="88dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_wrap"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user"
                android:ems="10"
                android:id="@+id/user" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pass_wrap"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:layout_below="@+id/user_wrap"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pass"
                android:hint="@string/pass"
                android:layout_marginTop="20dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/login"
                android:textColor="@color/white"
                android:id="@+id/log"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/pass_wrap"
                android:layout_centerHorizontal="true"
                android:onClick="onLog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/signup"
                android:textColor="@color/red"
                android:id="@+id/sign"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/log"
                android:layout_centerHorizontal="true"
                android:onClick="onSign" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
