<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.moszben.iapp.Signup"
    android:background="@color/sign_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_wrap"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fname_wrap"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:layout_below="@id/name_wrap">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/fname" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age_wrap"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:layout_below="@id/fname_wrap">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/age" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/age_wrap"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/signup"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/spinner"
                android:layout_centerHorizontal="true"
                android:background="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login"
                android:textColor="@color/red"
                android:id="@+id/log"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/signup"
                android:layout_centerHorizontal="true"
                android:onClick="onLogin" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
